solucionado los font-size en px, ahora todos estan en rem

--- a/public/website/assets/CSS/404.scss
+++ b/public/website/assets/CSS/404.scss
@@ -24,7 +24,7 @@ main{
     display: flex;
     justify-content: center;
     color: white;
-    font-size: 150px;
+    font-size: 15rem;
     align-items: center;
     animation: pulse 5s ease-in-out infinite;
     font-weight: 900;
