--- a/public/website/assets/CSS/404.css
+++ b/public/website/assets/CSS/404.css
@@ -27,7 +27,7 @@ main {
       -ms-flex-pack: center;
           justify-content: center;
   color: white;
-  font-size: 150px;
+  font-size: 15rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
